syntax = "proto3";

option java_package = "com.wisnu.kurniawan.composetodolist.foundation.datasource.preference.model";
option java_multiple_files = true;

message CredentialPreference {
  string token = 1;
}
