syntax = "proto3";

option java_package = "com.wisnu.kurniawan.composetodolist.foundation.datasource.preference.model";
option java_multiple_files = true;

message UserLanguagePreference {
  LanguagePreference language = 1;
}

enum LanguagePreference {
  ENGLISH = 0;
  INDONESIA = 1;
}
